--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,16 @@
-org.gradle.jvmargs=-Xmx2G
-org.gradle.configuration-cache=false
+# gradle.properties - Configurações para Minecraft 1.21.5
 
-# Fabric Properties (https://fabricmc.net/develop)
-minecraft_version=1.21.10
-yarn_mappings=1.21.10+build.2
-loader_version=0.17.3
+# Minecraft e Fabric
+minecraft_version=1.21.5
+yarn_mappings=1.21.5+build.3
+loader_version=0.16.10
 
-# Mod Properties
-mod_version=0.1.0
-maven_group=com.example
-archives_base_name=addon-template
+# Fabric API
+fabric_version=0.119.5+1.21.5
 
-# Dependencies
+# Meteor Client (IMPORTANTE: Ainda não tem versão oficial para 1.21.5)
+# Use a versão 1.21.4 como base ou aguarde atualização
+meteor_version=0.5.9-SNAPSHOT
+
+# Gradle e Loom
+loom_version=1.10
