--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,13 @@
-# gradle.properties - Configurações para Minecraft 1.21.5
+# gradle.properties - Minecraft 1.21.5 SEM Meteor
+
+# Gradle
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
+
+# Mod Properties
+version=0.1.0
+maven_group=com.seunome
+archives_base_name=auto-elytra-swap
 
 # Minecraft e Fabric
 minecraft_version=1.21.5
@@ -8,9 +17,5 @@ loader_version=0.16.10
 # Fabric API
 fabric_version=0.119.5+1.21.5
 
-# Meteor Client (IMPORTANTE: Ainda não tem versão oficial para 1.21.5)
-# Use a versão 1.21.4 como base ou aguarde atualização
-meteor_version=0.5.9-SNAPSHOT
-
-# Gradle e Loom
+# Gradle Loom
 loom_version=1.10
